# teeterbot

./: .travis.yml  LICENSE  README.md  travis.sh
teeterbot/: CMakeLists.txt  package.xml
teeterbot_controllers/: CMakeLists.txt  package.xml
teeterbot_controllers/cfg/: MotorSpeedControl.cfg
teeterbot_controllers/launch/: controller_test.launch
teeterbot_controllers/src/: MotorSpeedController.cpp  MotorSpeedController.h  motor_speed_control_node.cpp
teeterbot_description/: CMakeLists.txt  package.xml
teeterbot_description/urdf/: teeterbot.urdf.xacro  teeterbot_friction.urdf
teeterbot_gazebo/: CMakeLists.txt  package.xml
teeterbot_gazebo/cfg/: MotorControl.cfg  MotorSpeedControl.cfg
teeterbot_gazebo/config/: gazebo_clock_pub.yaml
teeterbot_gazebo/launch/: controller_test.launch  gzclient.launch.py  gzserver.launch.py  teeterbot_empty_world.launch  teeterbot_empty_world.launch.py  teeterbot_robot.launch  teeterbot_robot.launch.py  teeterbot_simulator.launch
teeterbot_gazebo/src/: ControllerInterfacePlugin.cpp  ControllerInterfacePlugin.h  ControllerInterfacePlugin.hpp  DcMotorSim.cpp  DcMotorSim.h  DcMotorSim.hpp  MotorController.cpp  MotorController.h  MotorController.hpp  MotorSpeedController.cpp  MotorSpeedController.h  motor_speed_control_node.cpp
teeterbot_gazebo/srv/: NudgeTeeterbot.srv
