<?xml version="1.0"?>
<package format="2">
  <name>teeterbot</name>
  <version>0.0.0</version>
  <description>
    Metapackage for teeterbot
  </description>
  <maintainer email="mradov@gmail.com">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>teeterbot_gazebo</exec_depend>
  <exec_depend>teeterbot_description</exec_depend>
  <exec_depend>hector_gazebo</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
