<?xml version="1.0"?>
<package format="2">
  <name>teeterbot_controllers</name>
  <version>0.0.0</version>
  <description>
    Control algorithms for teeterbot
  </description>
  <maintainer email="mradov@gmail.com">Micho Radovnikovich</maintainer>
  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
  </export>
</package>
