<?xml version="1.0"?>
<package format="2">
  <name>teeterbot_gazebo</name>
  <version>0.0.0</version>
  <description>
    Gazebo plugins for teeterbot
  </description>
  <maintainer email="mradov@gmail.com">Micho Radovnikovich</maintainer>
  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>

  <build_depend>message_generation</build_depend>

  <export>
  </export>
</package>
